keycloak/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: keycloak
      port: 8081
      protocol: HTTP
